sandc/test/fixtures/astRegression/shouldFail/productions/statement/IfTypeGuardStatementWithTypeGuardInElseIfClause.sand
pub class IfTypeGuardStatementWithTypeGuardInElseIfClause {
    foo() {
        if let a = b {

        } else if let a = b {

        } else {
            
        }
    }
}